# crashpad-binaries

./: CMakeLists.txt  README.md
cmake/: CrashpadConfig.cmake  CrashpadTargets.cmake
lib/Windows/: base.lib  client.lib  handler.lib
lib/windows/debug/MDd/: base.lib  client.lib  common.lib
lib/windows/debug/MTd/: client.lib
lib/windows/release/MD/: base.lib  client.lib  common.lib
lib/windows/release/MT/: base.lib  client.lib  common.lib
scripts/: build-linux.sh  build-macos.sh  build-windows.bat  build-windows.ps1
src/: crashpad.cpp
